--- a/zeusTheShihTzu.html
+++ b/zeusTheShihTzu.html
@@ -20,11 +20,11 @@
     <!-- Header of the WebSite -->
     <header class="header">
         <nav>
-            <a href="index-myShihTzu.html"><img src="images/shihtzu-icon02.jpeg" alt="a Shih Tzu icon"></a>
+            <a href="index.html"><img src="images/shihtzu-icon02.jpeg" alt="a Shih Tzu icon"></a>
                 <div class="nav_links" id="navLinks">
                     <i class="fa fa-times" onclick="hideMenu()"></i>
                     <ul>
-                        <li><a href="index-myShihTzu.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="zeusTheShihTzu.html">Zeus</a></li>
                         <li><a href="contactUs.html">Contact Us</a></li>
                     </ul>
